--- a/webpage/css/skeleton.css
+++ b/webpage/css/skeleton.css
@@ -140,9 +140,13 @@ h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
 h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
 h5 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
 h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
+p{
+  font-size: 1.7rem;
+}
 
 /* Larger than phablet */
 @media (min-width: 550px) {
+  p  { font-size: 2rem; }
   h1 { font-size: 5.0rem; }
   h2 { font-size: 4.2rem; }
   h3 { font-size: 3.6rem; }
@@ -370,6 +374,15 @@ form {
 .u-pull-left {
   float: left; }
 
+  /* CustomCSS
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+#title{
+  text-align: center;
+}
+.secondBlock{
+  padding-top: 5rem;
+}
+
 
 /* Misc
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -383,12 +396,6 @@ iframe{
   border: 2px solid black;
   width: 100%;
   max-width: 650px;
-}
-#title{
-  text-align: center;
-}
-.secondBlock{
-  padding-top: 5rem;
 }
 
 /* Clearing
